# keycloak-spicedb-migration-tool

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  keycloak_to_spicedb_architecture.md  pyproject.toml  requirements.txt  setup.py
docs/: ARCHITECTURE.md  README.md
examples/: example_keycloak_export.json  example_spicedb_schema.zed
k2spicedb/: cli.py  output_writer.py  parser.py  transformer.py
kc2spicedb/: cli.py  logging_config.py
scripts/: export_realm.sh
src/k2spicedb/: concurrency.py  prompt_handler.py  schema_generator.py
tests/: test_cli.py  test_parser.py  test_transformer.py
