[tool.poetry]
name = "kc2spicedb"
version = "0.1.0"
description = "A tool to migrate Keycloak realms to SpiceDB schemas"
authors = ["James Staud <james@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
json = "^2.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
